Pull #17487: Remove unused tag `rewrite`