@@ -33,6 +33,7 @@ import java.lang.reflect.ParameterizedType;
 import java.net.URI;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.BitSet;
@@ -459,20 +460,20 @@ public class XdocsPagesTest {
 
     @Test
     public void testAlphabetOrderAtIndexPages() throws Exception {
-        final Path allChecks = Path.of("src/site/xdoc/checks.xml");
+        final Path allChecks = Paths.get("src/site/xdoc/checks.xml");
         validateOrder(allChecks, "Check");
 
         final String[] groupNames = {"annotation", "blocks", "design",
             "coding", "header", "imports", "javadoc", "metrics",
             "misc", "modifier", "naming", "regexp", "sizes", "whitespace"};
         for (String name : groupNames) {
-            final Path checks = Path.of("src/site/xdoc/checks/" + name + "/index.xml");
+            final Path checks = Paths.get("src/site/xdoc/checks/" + name + "/index.xml");
             validateOrder(checks, "Check");
         }
-        final Path filters = Path.of("src/site/xdoc/filters/index.xml");
+        final Path filters = Paths.get("src/site/xdoc/filters/index.xml");
         validateOrder(filters, "Filter");
 
-        final Path fileFilters = Path.of("src/site/xdoc/filefilters/index.xml");
+        final Path fileFilters = Paths.get("src/site/xdoc/filefilters/index.xml");
         validateOrder(fileFilters, "File Filter");
     }
 
@@ -1508,8 +1509,8 @@ public class XdocsPagesTest {
             stream = collection.stream()
                     .mapToInt(number -> (int) number);
         }
-        else if (value instanceof BitSet set) {
-            stream = set.stream();
+        else if (value instanceof BitSet) {
+            stream = ((BitSet) value).stream();
         }
         else {
             stream = Arrays.stream((int[]) value);
@@ -1626,10 +1627,8 @@ public class XdocsPagesTest {
         }
 
         if (!expectedText.isEmpty()) {
-            expectedText.append("""
-                    All messages can be customized if the default message doesn't \
-                    suit you.
-                    Please see the documentation to learn how to.""");
+            expectedText.append("All messages can be customized if the default message doesn't "
+                    + "suit you.\nPlease see the documentation to learn how to.");
         }
 
         if (subSection == null) {
@@ -2310,7 +2309,7 @@ public class XdocsPagesTest {
     }
 
     private static List<Path> collectAllXmlTemplatesUnderSrcSite() throws IOException {
-        final Path root = Path.of("src/site/xdoc");
+        final Path root = Paths.get("src/site/xdoc");
         try (Stream<Path> walk = Files.walk(root)) {
             return walk
                     .filter(path -> path.getFileName().toString().endsWith(".xml.template"))
